yaml/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    name: deployment-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-postgres
  labels:
    name: deployment-postgres
spec:
  selector: 
    matchLabels:
      name: deployment-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: deployment-postgres
    spec:
      containers:
        - name: db-postgres
          image: postgres:13-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/storage/
              name: postgres-persistance-storage
      volumes:
        - name: postgres-persistance-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
